--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=3000
-GROQ_API_KEY=YOUR_GROG_API_KEY
+GROQ_API_KEY=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 // replace with your own key
 GROQ_API_ENDPOINT=https://api.groq.com/v1
