--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "CHOKIDAR_USEPOLLING=true nodemon src/server.ts",
-    "start": "node dist/server.js",
+    "start": "node server.js",
     "build": "tsc"
   },
   "keywords": [],
