--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,2 @@
 # VITE_API_URL=http://localhost:5001/api
-VITE_API_URL=https://job-fit-4onzrz83x-naveens-projects-2deba901.vercel.app
-REACT_APP_API_URL=https://job-fit-4onzrz83x-naveens-projects-2deba901.vercel.app
+REACT_APP_API_URL=https://job-fit-pro-backend.vercel.app
