--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,16 @@
 {
   "name": "jobfitpro",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "dev": "CHOKIDAR_USEPOLLING=true nodemon src/server.ts",
+    "start:dev": "CHOKIDAR_USEPOLLING=true nodemon src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "child_process": "^1.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "groq-sdk": "^0.15.0",
     "pdf-parse": "^1.1.1",
     "uuid": "^11.1.0"
@@ -24,13 +22,10 @@
     "@types/node": "^22.13.8",
     "@types/pdf-parse": "^1.1.4",
     "@types/uuid": "^10.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "@vercel/node": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2",
-    "@vercel/node": "^2.11.0"
+    "typescript": "^5.8.2"
   }
 }
