--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,1 @@
-VITE_API_URL=https://job-fit-pro-backend.vercel.app
-REACT_APP_API_URL=https://job-fit-pro-backend.vercel.app
+VITE_API_URL=http://localhost:3000
